@@ -5,6 +5,9 @@ New features:
 
 * Middle-button support for selection rects
 
+* Fix GitHub Issue #151: Default custom colors
+  - Harmonizes color picker dialog between platforms
+
 Bug fixes:
 
 Other:
